# doc-hub

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
.agent/: install-manager-plan.md  install-manager-spec.md
.agent/install-manager/: AGENTS.md  MEMORY.md  README.md
.agent/install-manager/database/: backup-restore.md  initialization.md  status.md
.agent/install-manager/diagnostics/: commands.md  common-failures.md  health-checks.md
.agent/install-manager/install/: clone-setup.md  environment.md  services.md
.agent/install-manager/memory/: installation-state.md  resolved-incidents.md
.agent/install-manager/repair/: recovery-playbooks.md  reset-reindex.md
.agent/install-manager/scripts/: check-db.sh  check-env.sh  check-mcp.sh
docs/: fix-incremental-sync.md  sync-behavior.feature  writing-fetchers.md
docs/dev/: database-schema.md  feature-catalog.md  plugin-authoring.md  protocols-reference.md  search-internals.md  testing-guide.md
docs/exec-plans/completed/plugin-architecture/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  _doc_plan.md  _original_spec.md  plan.md
docs/exec-plans/document-hierarchy/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  _original_spec.md  plan.md
docs/superpowers/plans/: 2026-03-26-cli-usability-pass.md  2026-03-26-global-install-service.md  2026-03-26-unified-cli-implementation.md  2026-03-27-pipeline-add-logs.md  2026-03-28-llm-cleaning-step.md  2026-04-24-doc-versioning.md
docs/superpowers/specs/: 2026-03-26-cli-usability-pass-design.md  2026-03-26-global-install-service-design.md  2026-03-26-unified-cli-design.md  2026-03-27-doc-hub-search-skill-design.md  2026-03-27-utils-subcommand-design.md  2026-03-28-llm-cleaning-step-design.md
docs/user/: cli-reference.md  cloud-database.md  configuration.md  evaluation.md  getting-started.md  mcp-server.md
eval/: pydantic-ai.json
man/: doc-hub.1
scripts/: doc-pipeline.py  pipeline.py
src/doc_hub/: __init__.py  browse.py  clean.py  corpora.py  db.py  discovery.py  documents.py  embed.py  eval.py  fetchers.py  index.py  mcp_server.py  models.py  parse.py  paths.py  pipeline.py  protocols.py  search.py  versions.py
src/doc_hub/_builtins/embedders/: gemini.py
src/doc_hub/_builtins/fetchers/: direct_url.py  git_repo.py  jina.py  llms_txt.py  local_dir.py  sitemap.py  url_filter.py
src/doc_hub/_builtins/parsers/: markdown.py
src/doc_hub/cli/: docs.py  main.py  pipeline.py  serve.py  shared.py
tests/: __init__.py  test_browse_cli.py  test_clean.py  test_corpora.py  test_db.py  test_db_schema.py  test_discovery.py  test_documents.py  test_embed.py  test_eval.py  test_fetchers.py  test_gemini_embedder.py  test_index.py  test_install_manager_scripts.py  test_markdown_parser.py  test_mcp_server.py  test_models.py  test_parse.py  test_paths.py  test_pipeline.py  test_pipeline_tree.py  test_protocols.py  test_search.py  test_unified_cli.py  test_url_filter.py  test_versions.py
